--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
         <div class="divreceitageral">
             <div class="receita">
-            <img class="img" src="/images/paodequeijo.jpeg">
+            <img class="img" src="./images/paodequeijo.jpeg">
                 <div class="texto">
                     <h1>Pao de queijo</h1>
                         <ul style="text-align:left;">              
