--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
             <img class="img" src="./images/paodequeijo.jpeg">
                 <div class="texto">
                     <h1>Pao de queijo</h1>
-                        <ul style="text-align:left;">              
+                        <ol style="text-align:left;">              
                         <li> Misture 1 ovo inteiro + 2 colheres de sopa de polvilho azedo ou tapioca, </li>
                         <li> + 1 colher de sopa de creme de ricota ou cottage <br>
                         <li> + 1 colher de sopa de queijo ralado + 1/2 colher de café de fermento em pó, <br>
                         <li>  Coloque em forminha de silicone e asse em forno médio 180C por 20 minutos ( verificar sempre) <br>
                         <li> Calorias : 53 kcal / unidade
-                        </ul>     
+                        </ol>     
                 </div>
             </div>
         </div>
